--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,8 @@ h5 {
   font-style: italic;
   font-size: 14px;
   color: #999;
-  line-height: 16px;
-  float: left;
+  width:50%;
+  text-align: left;
 }
 
 .location-text {
@@ -75,8 +75,8 @@ h5 {
   font-size: 14px;
   color: #999;
   line-height: 16px;
-  float: right;
-
+  width: 50%;
+  text-align: right;
 }
 
 p {
@@ -138,7 +138,6 @@ a {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 10px;
 }
 
 .flex-column {
