--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,13 @@ h3 {
     line-height: 22px;
 }
 
+.ol-title {
+    font-style: italic;
+    font-size: 20px;
+    color: #000;
+    line-height: 22px;
+}
+
 h4 {
     font-weight: bold;
     font-size: 14px;
@@ -60,12 +67,17 @@ h5 {
     padding: 10px 5%;
 }
 
+#topContacts {
+    padding-bottom: 10px;
+    padding-top: 5px;
+}
+
 .date-text {
     font-style: italic;
     font-size: 14px;
     color: #999;
-    width: 50%;
-    text-align: left;
+    line-height: 16px;
+    float: left;
 }
 
 .location-text {
@@ -73,8 +85,7 @@ h5 {
     font-size: 14px;
     color: #999;
     line-height: 16px;
-    width: 50%;
-    text-align: right;
+    float: right;
 }
 
 p {
